Formatted meta data files

--- a/CSharpExamples/.NET5.md
+++ b/CSharpExamples/.NET5.md
@@ -68,3 +68,8 @@ Your app currently uses .NET Framework (recommendation is to extend instead of m
 Your app uses third-party .NET libraries or NuGet packages not available for .NET 5.
 Your app uses .NET technologies that aren't available for .NET 5.
 Your app uses a platform that doesn't support .NET 5.
+
+
+
+
+dotnet dev-certs https --trust
