Added basic .NET related concepts

--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -1,1 +1,169 @@
-﻿NuGet======NuGet is an open-source package manager designed for .NET.A NuGet package is a .zip file with the .nupkg extension that contains compiled code (DLLs), other files related to that code, and a descriptive manifest that includes information like the package's version number.Developers with code to share create packages and publish them to nuget.org or a private host. Developers who want to use shared code add a package to their project and can then call the API exposed by the package in their project code.CLR=====The .NET CLR is a cross-platform runtime that includes support for Windows, macOS, and Linux.The CLR handles memory allocation and management.The CLR is also a virtual machine that not only executes apps but also generates and compiles code using a just-in-time (JIT) compiler.JIT compiler and IL=====================Higher-level .NET languages, such as C#, compile down to a hardware-agnostic instruction set, which is called Intermediate Language (IL).When an app runs, the JIT compiler translates IL to machine code that the processor understands.JIT compilation happens on the same machine that the code is going to run on.Since JIT compilation occurs during execution of the application, the compilation time is part of the run time.AOT compiler=============The default experience for most .NET workloads is the JIT compiler, but .NET offers two forms of ahead-of-time (AOT) compilation:Some scenarios require 100% AOT compilation. An example is iOS[xamerin.ios SDK].In other scenarios, most of an app's code is AOT-compiled but some is JIT-compiled. Some code patterns aren't friendly to AOT (like generics).An example of this form of AOT compilation is the ready-to-run publish option. This form of AOT offers the benefits of AOT without its drawbacks.CI/CD======MSBuild and the .NET CLI can be used with various continuous integration tools and environments, such as:GitHub ActionsAzure DevOpsCAKEFAKE
+.NET Framework
+==============
+It is a complete framwork or environment that allows developers to create, build, run and deploy .NET based applications like.
+Windows, web, service, console, web service, window services, wpf, wcf & WWF.
+It allows multiple high level programming langulages like VC++, VB, VC#, F#.
+It supports Object Oriented Programming Model.
+
+.NET Framework components:
+==========================
+Base class libraries
+Common Language Runtime
+Common Type System
+Application Support[Windows, Web, Services]
+.NET framework Security
+
+.NET 4.0 Features
+========
+Dynamic Language Runtime
+Managed Extensibility Framework
+Parallel Programming
+Improvements in application support and deployments
+Security model
+Asp.NET services,
+EF
+WCF
+WWF
+
+Intermediate Language :[IL]
+===========================
+All .NET managed programming language codes are getting compiled by the language compilers into hardware agnostic instructions sets called Intermediate Language.
+IL is converted into machine code using Just In Time compiler when you run the application on the same machine.
+
+Manifest:
+=========
+Assembly meta data like name, version, security & scope of assembilies are stored in the manifest section of portable executable along with MSIL.
+
+Managed Extensibility F/w:
+==========================
+MEF is a new library introduced in .NET 4.0 which helps in extending your application by providing greater reuse of application & components.
+
+CTS [Common Type System]:
+=====
+CTS provides set of base data type for all .NET supported languages. which means size of the integer and long variables are same across all .NET languages. However each language has its own alias for the base types provided by CTS.
+CTS        C#        VB
+---        ----     -----
+Int32      int      Integer     int & Integer are aliases of Int32[4Byte]
+
+Side By Side Execution:
+=======================
+The process the running multiple versions of application or components & CLR on the same computer at a time 
+
+System.GC.Collect() will enforce the Garbage collection
+Finalize                      
+========
+Called automatically by the Runtime
+CLR has GC which periodically check the objects in HEAP memory which are no longer referenced and it calls the Finalize to release.
+
+Dispose
+=======
+Called programmatically by developer
+Release the HEAP memory objects.
+Class needs to implement IDisposable
+
+CAS: Code Access Security
+==========================
+It is par of .NET framework security model.
+It prevents unauthorized access of resources and operations. and also restricts the code to perform certain tasks.
+capsol -security on
+capsol -security off
+Mechanism:
+========
+Key concept of CAS : Code Group & Permissions
+A Code Group contains assemble in it.
+Permissions are granted to each code group.
+
+Assembly Execution Steps:
+=========================
+Evidences are gathered for assembly from Manifest.
+Depends on gathered evidenes assemblies are assigned to a code group.
+Security rights are allocation to the Assembly based on the Code Group.
+Assembly runs as per the rights assigned to it.
+
+Execution Process:
+=================
+Language Code =>Choose Language Compiler[Roslyn, F#] => Comoile code into MSIL => JIT Compilation[MSIL to Native/Machine Code] =>Executing the code.
+
+Lazy Initialization:
+====================
+Is is a process by which an object is not initialized until it is first called in your code.
+System.Lazy<T> is used for executing lazy initialization.
+It helps to reduce wastage of resource and memory which intern improves the performance. also supports thread safty.
+
+NuGet
+======
+NuGet is an open-source package manager designed for .NET.
+A NuGet package is a .zip file with the .nupkg extension that contains compiled code (DLLs), other files related to that code,
+ and a descriptive manifest that includes information like the package's version number.
+Developers with code to share create packages and publish them to nuget.org or a private host. D
+evelopers who want to use shared code add a package to their project and can then call the API exposed by the package in their project code.
+
+Generations in GC:
+==================
+Generation 0 => Objects that are just initialized
+Generation 1 => Objects that are under GC process
+Generation 2 => Old objects in Generation 1
+
+Mutable object and Immutable objects:
+=====================================
+Mutable objects are the one which will changes its state or value once it is been initialized.
+  StringBuilder
+Immutable objects can't change its state or value once it is initialized.
+  System.String
+  
+Roles of CLR
+=============
+Automatic Memory Management
+Garbage Collection
+Code Access Security
+Code Verififcation
+JIT Compilation
+
+Jagged Arrays:
+============
+Jagged arrays are the one which has another array as an element.
+
+C#.NET
+support unsigned int
+Strongly typed language
+Supports operator overloading
+Supports pointers
+XML documentation support
+VB.NET
+No support for unsingedint
+loosely typed language
+no operator overloading
+no pointer support
+no XML document support
+
+CLR
+=====
+The .NET CLR is a cross-platform runtime that includes support for Windows, macOS, and Linux.
+The CLR handles memory allocation and management.
+The CLR is also a virtual machine that not only executes apps but also generates and compiles code using a just-in-time (JIT) compiler.
+
+JIT compiler and IL
+=====================
+Higher-level .NET languages, such as C#, compile down to a hardware-agnostic instruction set, which is called Intermediate Language (IL).
+When an app runs, the JIT compiler translates IL to machine code that the processor understands.
+JIT compilation happens on the same machine that the code is going to run on.
+
+Since JIT compilation occurs during execution of the application, the compilation time is part of the run time.
+
+AOT compiler
+=============
+The default experience for most .NET workloads is the JIT compiler, but .NET offers two forms of ahead-of-time (AOT) compilation:
+Ahead of time (AOT) delivers faster start-up time, especially in large applications where much code executes on startup.
+
+Some scenarios require 100% AOT compilation. An example is iOS[xamerin.ios SDK].
+In other scenarios, most of an app's code is AOT-compiled but some is JIT-compiled. Some code patterns aren't friendly to AOT (like generics).
+An example of this form of AOT compilation is the ready-to-run publish option. This form of AOT offers the benefits of AOT without its drawbacks.
+
+CI/CD
+======
+MSBuild and the .NET CLI can be used with various continuous integration tools and environments, such as:
+
+GitHub Actions
+Azure DevOps
+CAKE
+FAKE
