--- a/CSharpExamples/4.DotNETvs.NETCorevs.NETStd.md
+++ b/CSharpExamples/4.DotNETvs.NETCorevs.NETStd.md
@@ -81,3 +81,13 @@ Your app currently uses .NET Framework (recommendation is to extend instead of m
 Your app uses third-party .NET libraries or NuGet packages not available for .NET 5.
 Your app uses .NET technologies that aren't available for .NET 5.
 Your app uses a platform that doesn't support .NET 5.
+
+What is difference between .NET Core and .NET Framework?
+========================================================
+.NET as whole now has 2 flavors:
+
+.NET Framework
+.NET Core
+.NET Core and the .NET Framework have (for the most part) a subset-superset relationship. .NET Core is named “Core” since it contains the core features from the .NET Framework, for both the runtime and framework libraries. For example, .NET Core and the .NET Framework share the GC, the JIT and types such as String and List.
+
+.NET Core was created so that .NET could be open source, cross platform and be used in more resource-constrained environments.
