--- a/CSharpExamples/5.DotNET5.md
+++ b/CSharpExamples/5.DotNET5.md
@@ -70,6 +70,12 @@ Your app uses .NET technologies that aren't available for .NET 5.
 Your app uses a platform that doesn't support .NET 5.
 
 
+What is Kestrel?
+================
 
+Kestrel is a cross-platform web server built for ASP.NET Core based on libuv – a cross-platform asynchronous I/O library.
+It is a default web server pick since it is used in all ASP.NET Core templates.
+It is really fast.
+It is secure and good enough to use it without a reverse proxy server. However, it is still recommended that you use IIS, Nginx or Apache or something else.
 
 dotnet dev-certs https --trust
