--- a/CSharpExamples/5.DotNET5.md
+++ b/CSharpExamples/5.DotNET5.md
@@ -78,4 +78,7 @@ It is a default web server pick since it is used in all ASP.NET Core templates.
 It is really fast.
 It is secure and good enough to use it without a reverse proxy server. However, it is still recommended that you use IIS, Nginx or Apache or something else.
 
+If your application accepts requests only from an internal network, you can use Kestrel by itself.
+
+If you expose your application to the Internet, you must use IIS, Nginx, or Apache as a reverse proxy server. A reverse proxy server receives HTTP requests from the Internet and forwards them to Kestrel after some preliminary handling. The most important reason for using a reverse proxy for edge deployments (exposed to traffic from the Internet) is security. Kestrel is relatively new and does not yet have a full complement of defenses against attacks.
 dotnet dev-certs https --trust
