--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -167,3 +167,13 @@ GitHub Actions
 Azure DevOps
 CAKE
 FAKE
+
+PDB[Program Database] file
+==========================
+Microsoft propriated file extension
+*.pdb file is used to store the debugging information of a program [*.exe/*.dll]
+ZeeDashboard.dll & ZeeDashboard.pdb
+
+VS debugger uses *.pdb file to load debugging information & uses to locate the symbols and relate the current execution state of a program code.
+pdb files are used to load the crash data & associate with the program source code.
+
