--- a/CSharpExamples/1.SDKVsRunTime.md
+++ b/CSharpExamples/1.SDKVsRunTime.md
@@ -7,17 +7,19 @@ When you download .NET, you can choose the SDK or a runtime, such as the .NET ru
 The SDK download includes the following components:
 ===================================================
 
-The .NET CLI. 
-  Command-line tools that you can use for local development and continuous integration scripts.
-The dotnet driver. 
-  A CLI command that runs framework-dependent apps.
-The Roslyn and F# programming language compilers.
-The MSBuild build engine.
-The .NET runtime. 
-  Provides a type system, assembly loading, a garbage collector, native interop, and other basic services.
-Runtime libraries. 
-  Provides primitive data types and fundamental utilities.
-The ASP.NET Core runtime. 
-  Provides basic services for internet-connected apps, such as web apps, IoT apps, and mobile backends.
-The desktop runtime. 
-  Provides basic services for Windows desktop apps, including Windows Forms and WPF.
+The .NET CLI.<br/> 
+&emsp;Command-line tools that you can use for local development and continuous integration scripts.
+<br/>The dotnet driver. <br/>
+&emsp;A CLI commands that runs framework-dependent apps. <br/>
+dotnet exec .sln/.csprof, dotnet run .dll, dotnet build .sln, dotnet clean,dotnet format[code format] dotnet restore. 
+<br/>build the net application even msbuild also does the same but it makes the Rosylyn c# compiler to load in .NET f/w whereas dotnet build will load Roslyn on .NET Core SDK
+&emsp;The Roslyn and F# programming language compilers.
+<br/>The MSBuild build engine.<br/>
+<br/>The .NET runtime. <br/>
+&emsp;Provides a type system, assembly loading, a garbage collector, native interop, and other basic services.
+<br/>Runtime libraries. <br/>
+&emsp;Provides primitive data types and fundamental utilities.
+<br/>The ASP.NET Core runtime. <br/>
+&emsp;Provides basic services for internet-connected apps, such as web apps, IoT apps, and mobile backends.
+<br/>The desktop runtime. <br/>
+&emsp;Provides basic services for Windows desktop apps, including Windows Forms and WPF.
