--- a/CSharpExamples/1.SDKVsRunTime.md
+++ b/CSharpExamples/1.SDKVsRunTime.md
@@ -13,7 +13,7 @@ The .NET CLI.<br/>
 &emsp;A CLI commands that runs framework-dependent apps. <br/>
 dotnet exec .sln/.csprof, dotnet run .dll, dotnet build .sln, dotnet clean,dotnet format[code format] dotnet restore. 
 <br/>build the net application even msbuild also does the same but it makes the Rosylyn c# compiler to load in .NET f/w whereas dotnet build will load Roslyn on .NET Core SDK
-&emsp;The Roslyn and F# programming language compilers.
+<br/>The Roslyn and F# programming language compilers.
 <br/>The MSBuild build engine.<br/>
 <br/>The .NET runtime. <br/>
 &emsp;Provides a type system, assembly loading, a garbage collector, native interop, and other basic services.
