--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -7,11 +7,11 @@ It supports Object Oriented Programming Model.
 
 .NET Framework components:
 ==========================
-Base class libraries
-Common Language Runtime
-Common Type System
-Application Support[Windows, Web, Services]
-.NET framework Security
+Base class libraries<br/>
+Common Language Runtime<br/>
+Common Type System<br/>
+Application Support[Windows, Web, Services]<br/>
+.NET framework Security<br/>
 
 .NET 4.0 Features
 ========
