--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -1,9 +1,9 @@
 .NET Framework
 ==============
-It is a complete framwork or environment that allows developers to create, build, run and deploy .NET based applications like.
-Windows, web, service, console, web service, window services, wpf, wcf & WWF.
-It allows multiple high level programming langulages like VC++, VB, VC#, F#.
-It supports Object Oriented Programming Model.
+It is a complete framwork or environment that allows developers to create, build,debug, run and deploy .NET based applications like.
+Windows, web, service, console, web service, window services, wpf, wcf & WWF.<br/>
+It allows multiple high level programming langulages like VC++, VB, VC#, F#.<br/>
+It supports Object Oriented Programming Model.<br/>
 
 .NET Framework components:
 ==========================
