--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -15,24 +15,24 @@ Application Support[Windows, Web, Services]<br/>
 
 .NET 4.0 Features
 ========
-Dynamic Language Runtime
-Managed Extensibility Framework
-Parallel Programming
-Improvements in application support and deployments
-Security model
-Asp.NET services,
-EF
-WCF
-WWF
+Dynamic Language Runtime<br/>
+Managed Extensibility Framework<br/>
+Parallel Programming<br/>
+Improvements in application support and deployments<br/>
+Security model<br/>
+Asp.NET services,<br/>
+EF<br/>
+WCF<br/>
+WWF<br/>
 
 Intermediate Language :[IL]
 ===========================
-All .NET managed programming language codes are getting compiled by the language compilers into hardware agnostic instructions sets called Intermediate Language.
-IL is converted into machine code using Just In Time compiler when you run the application on the same machine.
+All .NET managed programming language codes are getting compiled by the language compilers into hardware agnostic instructions sets called Intermediate Language.<br/>
+IL is converted into machine code using Just In Time compiler when you run the application on the same machine.<br/>
 
 Manifest:
 =========
-Assembly meta data like name, version, security & scope of assembilies are stored in the manifest section of portable executable along with MSIL.
+Assembly meta data like name, version, security & scope of assembilies are stored in the manifest section of portable executable file along with MSIL.
 
 Managed Extensibility F/w:
 ==========================
@@ -40,7 +40,7 @@ MEF is a new library introduced in .NET 4.0 which helps in extending your applic
 
 CTS [Common Type System]:
 =====
-CTS provides set of base data type for all .NET supported languages. which means size of the integer and long variables are same across all .NET languages. However each language has its own alias for the base types provided by CTS.
+CTS provides set of base data type for all .NET supported languages. <br/>which means size of the integer and long variables are same across all .NET languages. <br/>However each language has its own alias for the base types provided by CTS.<br/>
 CTS        C#        VB
 ---        ----     -----
 Int32      int      Integer     int & Integer are aliases of Int32[4Byte]
@@ -52,57 +52,57 @@ The process the running multiple versions of application or components & CLR on 
 System.GC.Collect() will enforce the Garbage collection
 Finalize                      
 ========
-Called automatically by the Runtime
+Called automatically by the Runtime<br/>
 CLR has GC which periodically check the objects in HEAP memory which are no longer referenced and it calls the Finalize to release.
 
 Dispose
 =======
-Called programmatically by developer
-Release the HEAP memory objects.
-Class needs to implement IDisposable
+Called programmatically by developer<br/>
+Release the HEAP memory objects.<br/>
+Class needs to implement IDisposable<br/>
 
 CAS: Code Access Security
 ==========================
-It is par of .NET framework security model.
+It is part of .NET framework security model.
 It prevents unauthorized access of resources and operations. and also restricts the code to perform certain tasks.
 capsol -security on
 capsol -security off
 Mechanism:
 ========
-Key concept of CAS : Code Group & Permissions
-A Code Group contains assemble in it.
-Permissions are granted to each code group.
+Key concept of CAS : Code Group & Permissions<br/>
+A Code Group contains assembly in it.<br/>
+Permissions are granted to each code group.<br/>
 
 Assembly Execution Steps:
 =========================
-Evidences are gathered for assembly from Manifest.
-Depends on gathered evidenes assemblies are assigned to a code group.
-Security rights are allocation to the Assembly based on the Code Group.
-Assembly runs as per the rights assigned to it.
+Evidences are gathered for assembly from Manifest.<br/>
+Depends on gathered evidenes assemblies are assigned to a code group.<br/>
+Security rights are allocation to the Assembly based on the Code Group.<br/>
+Assembly runs as per the rights assigned to it.<br/>
 
 Execution Process:
 =================
-Language Code =>Choose Language Compiler[Roslyn, F#] => Comoile code into MSIL => JIT Compilation[MSIL to Native/Machine Code] =>Executing the code.
+Language Code =>Choose Language Compiler[Roslyn, F#] => Compile code into MSIL => JIT Compilation[MSIL to Native/Machine Code] =>Executing the code.
 
-Lazy Initialization:
+Lazy Initialization:[LINQ]
 ====================
-Is is a process by which an object is not initialized until it is first called in your code.
-System.Lazy<T> is used for executing lazy initialization.
-It helps to reduce wastage of resource and memory which intern improves the performance. also supports thread safty.
+Is is a process by which an object is not initialized until it is first called in your code.<br/>
+System.Lazy<T> is used for executing lazy initialization.<br/>
+It helps to reduce wastage of resource and memory which intern improves the performance. also supports thread safty.<br/>
 
 NuGet
 ======
-NuGet is an open-source package manager designed for .NET.
+NuGet is an open-source package manager designed for .NET.<br/>
 A NuGet package is a .zip file with the .nupkg extension that contains compiled code (DLLs), other files related to that code,
- and a descriptive manifest that includes information like the package's version number.
-Developers with code to share create packages and publish them to nuget.org or a private host. D
-evelopers who want to use shared code add a package to their project and can then call the API exposed by the package in their project code.
+ and a descriptive manifest that includes information like the package's version number.<br/>
+Developers with code to share create packages and publish them to nuget.org or a private host.<br/>
+Developers who want to use shared code add a package to their project and can then call the API exposed by the package in their project code.<br/>
 
 Generations in GC:
 ==================
-Generation 0 => Objects that are just initialized
-Generation 1 => Objects that are under GC process
-Generation 2 => Old objects in Generation 1
+Generation 0 => Objects that are just initialized<br/>
+Generation 1 => Objects that are under GC process<br/>
+Generation 2 => Old objects in Generation 1<br/>
 
 Mutable object and Immutable objects:
 =====================================
