--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -49,7 +49,7 @@ Side By Side Execution:
 =======================
 The process the running multiple versions of application or components & CLR on the same computer at a time 
 
-System.GC.Collect() will enforce the Garbage collection
+System.GC.Collect() will enforce the Garbage collection<br/>
 Finalize                      
 ========
 Called automatically by the Runtime<br/>
