--- a/CSharpExamples/3.BasicDotNetConcepts.md
+++ b/CSharpExamples/3.BasicDotNetConcepts.md
@@ -106,22 +106,22 @@ Generation 2 => Old objects in Generation 1<br/>
 
 Mutable object and Immutable objects:
 =====================================
-Mutable objects are the one which will changes its state or value once it is been initialized.
-  StringBuilder
-Immutable objects can't change its state or value once it is initialized.
-  System.String
+<br/>Mutable objects are the one which will changes its state or value once it is been initialized.<br/>
+  StringBuilder<br/>
+Immutable objects can't change its state or value once it is initialized.<br/>
+  System.String<br/>
   
 Roles of CLR
 =============
-Automatic Memory Management
-Garbage Collection
-Code Access Security
-Code Verififcation
-JIT Compilation
+Automatic Memory Management<br/>
+Garbage Collection<br/>
+Code Access Security<br/>
+Code Verififcation<br/>
+JIT Compilation<br/>
 
 Jagged Arrays:
 ============
-Jagged arrays are the one which has another array as an element.
+Jagged arrays are the one which has another array as an element.<br/>
 
 C#.NET
 support unsigned int
