--- a/CSharpExamples/4.DotNETvs.NETCorevs.NETStd.md
+++ b/CSharpExamples/4.DotNETvs.NETCorevs.NETStd.md
@@ -18,7 +18,7 @@ Although it can be used with a docker container, its image size is large and can
 Its open-source and Microsoft accepts third party contribution to .NET Core
 It supports desktop frameworks like Windows Forms and WPF from version 3.0
 The .NET Core also has support for a large number of third party packages as well but still, it doesn’t compete with .NET Framework in this area
-It does support in-app deployment model
+**It does support in-app deployment model**
 It is the best choice to work with docker containers
 
 .NET Framework and .NET Core vs .NET Standard
