--- a/CSharpExamples/1.SDKVsRunTime.md
+++ b/CSharpExamples/1.SDKVsRunTime.md
@@ -2,8 +2,9 @@
 =================
 The .NET SDK is a set of libraries and tools for developing and running .NET applications.
 
-When you download .NET, 
-you can choose the SDK or a runtime, such as the .NET runtime or the ASP.NET Core runtime. Install a runtime on a machine that you want to prepare for running .NET apps. Install the SDK on a machine that you want to use for development. When you download the SDK, you automatically get the runtimes with it.
+When you download .NET, <br/>
+you can choose the SDK or a runtime,<br/> such as 
+<br/>the .NET runtime[console appln]<br/> the ASP.NET Core runtime[web/server appln] <br/> .NET desktop runtime[used to run existing windows appln]. Install a runtime on a machine that you want to prepare for running .NET apps. Install the SDK on a machine that you want to use for development. When you download the SDK, you automatically get the runtimes with it.
 
 The SDK download includes the following components:
 ===================================================
